# bia-bob

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: comment-on-issue.yml  git-bob.yml  review-pull-request.yml
binder/: Dockerfile  README.ipynb
demo/: Blob_Segmentation_Analysis.ipynb  Blob_Segmentation_Analysis_1.ipynb  accelerate.ipynb  alice.ipynb  analysis_workflow.ipynb  asking_bob_what_it_does.ipynb  augmenting_prompts.ipynb  auto_execute.ipynb  azure.ipynb  banner.ipynb  basic_demo.ipynb  blablador.ipynb  browsing_folders.ipynb  bug_fixing.ipynb  choose_model.ipynb  claude.ipynb  codex.ipynb  complete_workflow.ipynb  custom-kernel-image-analysis.ipynb  custom-kernel-plotting.ipynb  custom_endpoints.ipynb  deepseek.ipynb  demo_gpt-4-vision-preview.ipynb  demo_seed.ipynb  documenting_code.ipynb  europe.csv  extensibility.ipynb  fine-tuning.ipynb  for_developers.ipynb  full_workflow.ipynb  gemini.ipynb  gemini_test.ipynb  generate_notebooks.ipynb  generating_files.ipynb  github_models.ipynb  globals.ipynb  google_colab.ipynb  gui_plots.ipynb  hela_cell_segmentation.ipynb  huggingface.ipynb  (+33 more)
demo/.ipynb_checkpoints/: basic_demo-checkpoint.ipynb
demo/fine-tuning/: 10_extract_from_notebooks.ipynb  20_manually_select.ipynb  30_convert_to_questions_and_answers.ipynb  40_fine_tuning.ipynb  90_model_testing.ipynb  cle_imports_text_code.jsonl  cle_imports_text_code_selected.jsonl  cle_questions_answers.jsonl  imports_text_code.jsonl  imports_text_code_selected.jsonl  questions_answers.jsonl
demo/modifying_notebooks/: mod_notebook.ipynb  mod_notebook_1.ipynb  modifying_notebooks.ipynb
src/bia_bob/: __init__.py  __main__.py  _accelerate.py  _bug_fixing.py  _document.py  _fine_tuning.py  _image_generation.py  _kernel.py  _machinery.py  _notebook_generation.py  _rag.py  _sound.py  _speak.py  _speech_recognition.py  _terminal.py  _tools.py  _utilities.py
src/bia_bob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bia_bob/endpoints/: _anthropic.py  _azure.py  _github_models.py  _google.py  _googlevertex.py  _huggingface.py  _mistral.py  _openai.py
src/bia_bob/suggestions/: _aicsimageio.py  _bia_bob.py  _cellpose.py  _czifile.py  _ipywidgets.py  _pandas.py  _scikit_image.py  readme.md
src/bia_tischi/: __init__.py  _machinery.py  _tools.py  _utilities.py
