[metadata]
name = bia-bob
version = attr: bia_bob.__version__
description = A Jupyter-based assistant for working on bio-image analysis tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/bia-bob
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/bia-bob/issues
    Documentation = https://github.com/haesleinhuepf/bia-bob#README.md
    Source Code = https://github.com/haesleinhuepf/bia-bob
    User Support = https://github.com/haesleinhuepf/bia-bob/issues

[options]
packages = find:
install_requires =
    numpy
    python-Levenshtein>=0.21.0
    scikit-image>=0.19.0
    langchain>=0.0.251
    stackview>=0.6.3
    napari-segment-blobs-and-things-with-membranes>=0.3.6
    napari-skimage-regionprops
    pandas
    seaborn
    SpeechRecognition
    PyAudio
    gTTS
    pydub

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
