[metadata]
name = bia-bob
version = attr: bia_bob.__version__
description = A Jupyter-based assistant for data analysis tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/bia-bob
author = Robert Haase, Christian Tischer
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/bia-bob/issues
    Documentation = https://github.com/haesleinhuepf/bia-bob#README.md
    Source Code = https://github.com/haesleinhuepf/bia-bob
    User Support = https://github.com/haesleinhuepf/bia-bob/issues

[options]
packages = find:
install_requires =
    numpy
    ipython
    jupyter_client
    metakernel
    Pillow
    openai>=1.30.1
    anthropic>=0.30.1
    ipynbname>=2024.1.0.0
    azure-ai-inference>=1.0.0b4
    mistralai>=1.0.0
    siphash24

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    bia-bob = bia_bob._terminal:command_line_interface
